worked on ai processing speech to text

--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,19 @@
 {
-      "manifest_version": 3,
-      "name": "Voice Navigator",
-      "version": "0.1.0",
-      "description": "AI-powered voice navigation for accessibility",
-      "permissions": ["activeTab", "scripting", "tts", "storage"],
-      "action": {
-        "default_popup": "src/popup/index.html"
-      },
-      "background": {
-        "service_worker": "src/background.js",
-        "type": "module"
-      },
-      "content_scripts": [{
-        "matches": ["<all_urls>"],
-        "js": ["src/content.js"]
-      }]
-    }
+  "manifest_version": 3,
+  "name": "Voice Navigator",
+  "version": "0.1.0",
+  "description": "AI-powered voice navigation for accessibility",
+  "permissions": ["activeTab", "scripting", "tts", "storage"],
+  "host_permissions": ["https://api.openai.com/*", "<all_urls>"],
+  "action": {
+    "default_popup": "src/popup/index.html"
+  },
+  "background": {
+    "service_worker": "src/background.js",
+    "type": "module"
+  },
+  "content_scripts": [{
+    "matches": ["<all_urls>"],
+    "js": ["src/content.js"]
+  }]
+}
