--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# Environment variables (IMPORTANT: never commit API keys!)
+.env
+.env.local
+.env.*.local
+
 # Logs
 logs
 *.log
@@ -7,9 +12,13 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Dependencies
 node_modules
+
+# Build output
 dist
 dist-ssr
+build
 *.local
 
 # Editor directories and files
@@ -22,3 +31,15 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# OS files
+Thumbs.db
+.DS_Store
+
+# Testing
+coverage
+.nyc_output
+
+# Misc
+*.pem
+*.key
